--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAWBRIDGE</title>
+    <title>DRAWBRIDGE — MVP за неделю | Разработка, интеграции, AI, DevOps</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +12,107 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap&subset=cyrillic,cyrillic-ext,latin" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    
+        <!-- SEO basics -->
+        <meta name="description" content="DRAWBRIDGE: MVP за неделю. Считаем ROI, проектируем архитектуру, выпускаем работающий продукт. Разработка веб/мобилей, интеграции 1С, телефония, AI, DevOps и аналитика.">
+        <meta name="robots" content="index, follow">
+        <link rel="canonical" href="https://drawbridge.kz/">
+    <meta name="theme-color" content="#000000">
+    <meta property="og:site_name" content="DRAWBRIDGE">
+    <link rel="alternate" href="https://drawbridge.kz/" hreflang="ru-KZ">
+    <link rel="alternate" href="https://drawbridge.kz/" hreflang="x-default">
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="ru_RU">
+        <meta property="og:title" content="DRAWBRIDGE — MVP за неделю">
+        <meta property="og:description" content="Считаем ROI, проектируем архитектуру, выпускаем работающий продукт. Разработка веб/мобилей, интеграции 1С, телефония, AI, DevOps и аналитика.">
+        <meta property="og:url" content="https://drawbridge.kz/">
+        <meta property="og:image" content="https://drawbridge.kz/logo.png">
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="DRAWBRIDGE — MVP за неделю">
+        <meta name="twitter:description" content="Считаем ROI, проектируем архитектуру, выпускаем работающий продукт.">
+        <meta name="twitter:image" content="https://drawbridge.kz/logo.png">
+
+            <!-- JSON-LD Structured Data -->
+            <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@graph": [
+                    {
+                        "@type": "Organization",
+                        "@id": "https://drawbridge.kz/#org",
+                        "name": "DRAWBRIDGE",
+                        "url": "https://drawbridge.kz/",
+                        "logo": "https://drawbridge.kz/logo.png",
+                        "contactPoint": [{
+                            "@type": "ContactPoint",
+                            "telephone": "+7 705 481 0862",
+                            "contactType": "sales",
+                            "areaServed": "KZ",
+                            "availableLanguage": ["ru"]
+                        }]
+                    },
+                    {
+                        "@type": "WebSite",
+                        "@id": "https://drawbridge.kz/#website",
+                        "url": "https://drawbridge.kz/",
+                        "name": "DRAWBRIDGE",
+                        "publisher": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "Разработка веб- и мобильных приложений",
+                        "description": "React/Next.js, Flutter; Go/Node.js на бэкенде.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "1С-интеграции и внешние компоненты",
+                        "description": "Драйверы эквайринга, обмен по API, синхронизация данных.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "Телефония и AI-операторы",
+                        "description": "FreePBX/Asterisk, IVR, автодозвон, TTS/ASR, аналитика разговоров.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "IoT и встраиваемые системы",
+                        "description": "Arduino/ESP32, RS-485/DMX, удалённый мониторинг и управление.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "LLM/AI для документов",
+                        "description": "Парсинг PDF/DOCX, мед-аудит, отчёты и проверки по правилам.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "eCommerce и CRM",
+                        "description": "Каталоги, корзина/оплата, интеграции с CRM/складом, аналитика.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "DevOps и инфраструктура",
+                        "description": "Docker, CI/CD, Nginx, наблюдаемость, производительность.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    },
+                    {
+                        "@type": "Service",
+                        "name": "Аналитика и BI",
+                        "description": "SQL-отчёты, дашборды, A/B-тесты, продуктовые метрики.",
+                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                    }
+                ]
+            }
+            </script>
 </head>
 
 <body>
@@ -39,6 +140,7 @@
             </div>
         </div>
         <div id="page3">
+            <h2 class="section-title" aria-label="Наши услуги">Наши услуги</h2>
             <div class="services">
                 <div class="service">
                     <h3>Разработка веб- и мобильных приложений</h3>
@@ -91,12 +193,12 @@
                     <p>Фокус на понятных регламентах, надёжных интеграциях и прозрачных метриках возвращает контроль над продуктом, сроками и себестоимостью.</p>
                 </div>
                 <div id="images">
-                    <img data-scroll data-scroll-speed="1"
+                    <img data-scroll data-scroll-speed="1" loading="lazy"
                         src="images/20251012_0343_Monochrome Controller Macro_simple_compose_01k7aq0xzee1rv5a2rjvd15t5s.png"
-                        alt="">
-                    <img data-scroll data-scroll-speed="1"
+                        alt="Монокромный контроллер крупным планом — визуал о технологичности">
+                    <img data-scroll data-scroll-speed="1" loading="lazy"
                         src="images/20251012_0406_Рука и планшет_simple_compose_01k7ara75afp5sas4qj5e7bhkw.png"
-                        alt="">
+                        alt="Рука и планшет — визуал о работе с продуктом и данными">
                 </div>
             </div>
             <hr>
