--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAWBRIDGE — MVP за неделю | Разработка, интеграции, AI, DevOps</title>
+    <title>DRAWBRIDGE — MVP за неделю | Разработка ПО в Казахстане (Алматы, Астана), интеграции, AI, DevOps</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     
         <!-- SEO basics -->
-        <meta name="description" content="DRAWBRIDGE: MVP за неделю. Считаем ROI, проектируем архитектуру, выпускаем работающий продукт. Разработка веб/мобилей, интеграции 1С, телефония, AI, DevOps и аналитика.">
+    <meta name="description" content="DRAWBRIDGE: MVP за неделю в Казахстане (Алматы, Астана). Разработка ПО: веб и мобильные приложения, интеграции 1С, телефония/Asterisk, AI/LLM, DevOps и аналитика. Считаем ROI, проектируем архитектуру, запускаем продукт.">
+    <meta name="keywords" content="разработка программного обеспечения Казахстан, программирование Алматы, программирование Астана, веб-разработка, мобильная разработка, интеграции 1С, Asterisk, AI, LLM, DevOps, eCommerce, CRM">
         <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
         <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
         <link rel="canonical" href="https://drawbridge.kz/">
@@ -27,7 +28,7 @@
         <meta property="og:type" content="website">
         <meta property="og:locale" content="ru_RU">
         <meta property="og:title" content="DRAWBRIDGE — MVP за неделю">
-        <meta property="og:description" content="Считаем ROI, проектируем архитектуру, выпускаем работающий продукт. Разработка веб/мобилей, интеграции 1С, телефония, AI, DevOps и аналитика.">
+    <meta property="og:description" content="MVP за неделю в Казахстане: разработка ПО (веб/мобайл), интеграции 1С, телефония/Asterisk, AI/LLM, DevOps и аналитика.">
         <meta property="og:url" content="https://drawbridge.kz/">
         <meta property="og:image" content="https://drawbridge.kz/logo.png">
         <meta property="og:image:width" content="1200">
@@ -70,49 +71,65 @@
                         "@type": "Service",
                         "name": "Разработка веб- и мобильных приложений",
                         "description": "React/Next.js, Flutter; Go/Node.js на бэкенде.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "1С-интеграции и внешние компоненты",
                         "description": "Драйверы эквайринга, обмен по API, синхронизация данных.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "Телефония и AI-операторы",
                         "description": "FreePBX/Asterisk, IVR, автодозвон, TTS/ASR, аналитика разговоров.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "IoT и встраиваемые системы",
                         "description": "Arduino/ESP32, RS-485/DMX, удалённый мониторинг и управление.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "LLM/AI для документов",
                         "description": "Парсинг PDF/DOCX, мед-аудит, отчёты и проверки по правилам.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "eCommerce и CRM",
                         "description": "Каталоги, корзина/оплата, интеграции с CRM/складом, аналитика.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "DevOps и инфраструктура",
                         "description": "Docker, CI/CD, Nginx, наблюдаемость, производительность.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                     },
                     {
                         "@type": "Service",
                         "name": "Аналитика и BI",
                         "description": "SQL-отчёты, дашборды, A/B-тесты, продуктовые метрики.",
-                        "provider": { "@id": "https://drawbridge.kz/#org" }
+                        "provider": { "@id": "https://drawbridge.kz/#org" },
+                        "areaServed": "Kazakhstan",
+                        "inLanguage": "ru"
                             },
                             {
                                 "@type": "FAQPage",
@@ -189,6 +206,16 @@
                 <p>DRAWBRIDGE строит мост от проблемы к решению: образование, работа, сервисы сопровождения.</p>
             </div>
         </div>
+        <section id="kz-seo">
+            <h2>Разработка программного обеспечения в Казахстане</h2>
+            <p>Мы делаем MVP за неделю и полный цикл разработки ПО для клиентов по всему Казахстану: Алматы, Астана, Шымкент и другие города. Комбинируем продуктовую экспертизу, интеграции и DevOps, чтобы быстрее выходить на рынок.</p>
+            <ul>
+                <li>Веб‑разработка (React/Next.js), мобильная разработка (Flutter), бэкенд (Go/Node.js)</li>
+                <li>Интеграции 1С, платежи, телефония (Asterisk/FreePBX), склад, CRM</li>
+                <li>AI/LLM для документов: парсинг, извлечение сущностей, проверки по правилам</li>
+                <li>DevOps: Docker, CI/CD, наблюдаемость, производительность, безопасность</li>
+            </ul>
+        </section>
         <div id="page3">
             <h2 class="section-title" aria-label="Наши услуги">Наши услуги</h2>
             <div class="services">
